правки в процессе посадки

--- a/app/page-catalog.html
+++ b/app/page-catalog.html
@@ -639,7 +639,7 @@
 					</div>
 
 
-					<div class="catlist-items-wrap" style="display: none;">
+					<div class="catlist-items-wrap">
 						<!-- catlist-item -->
 						<div class="catlist-item">
 							<div class="catlist-item-img">
@@ -680,7 +680,7 @@
 							</div>
 							<div class="catlist-item-links">
 								<a href="#0" class="btn btn-blue"><img src="img/icons/cart-btn-icon.svg" alt="alt" class="svg"></a>
-								<a href="#0" class="to-favorites"><img src="img/icons/favorites-icon.svg" alt="alt" class="svg"></a>
+								<span class="to-favorites"><a class="simplefavorite-button" data-postid="209" data-siteid="1" data-groupid="1" data-favoritecount="0" style=""><svg xmlns:dc="http://purl.org/dc/elements/1.1/" xmlns:cc="http://creativecommons.org/ns#" xmlns:rdf="http://www.w3.org/1999/02/22-rdf-syntax-ns#" xmlns:svg="http://www.w3.org/2000/svg" xmlns="http://www.w3.org/2000/svg" xmlns:sodipodi="http://sodipodi.sourceforge.net/DTD/sodipodi-0.dtd" xmlns:inkscape="http://www.inkscape.org/namespaces/inkscape" version="1.1" id="svg96" width="73.351196" height="67.121056" viewBox="0 0 73.351196 67.121056" sodipodi:docname="favorites-icon.svg" inkscape:version="0.92.4 (unknown)">   <path style="stroke-width:0.31999999" d="M 34.152483,64.696483 C 32.840633,63.36297 29.249884,60.018058 26.173034,57.263341 6.6168744,39.754651 0.6675144,31.548291 0.0388944,21.214773 -0.6961656,9.1315803 9.0837444,-0.64698936 21.223064,0.03349094 26.243484,0.31491475 31.466759,2.5378235 35.042774,5.9148454 l 1.630669,1.5399283 1.75087,-1.6 c 2.329158,-2.1284543 5.260192,-3.8296747 8.382989,-4.86562513 2.185536,-0.7250246 3.121699,-0.85103061 6.4,-0.86142935 2.8107,-0.008916 4.354649,0.14283611 5.759999,0.56613868 6.669776,2.0089887 11.796813,7.1365157 13.799594,13.8009151 0.77656,2.584051 0.7796,8.459441 0.0059,11.36 -0.864778,3.241916 -3.456522,8.144659 -6.343575,11.999999 -3.150451,4.207075 -10.976214,12.12295 -18.981897,19.200463 -3.168,2.800704 -6.918668,6.211258 -8.334819,7.579005 l -2.574822,2.486816 -2.385178,-2.424573 z" id="path137" inkscape:connector-curvature="0"></path> </svg></a></span>
 							</div>
 						</div>
 						<!-- /catlist-item -->
@@ -725,6 +725,10 @@
 						</div>
 						<!-- /catlist-item -->
 
+					</div>
+
+					<div class="btn-wrap">
+						<a href="#0" class="btn btn-blue" id="more-products">Показать следующие 15 товаров</a>
 					</div>
 
 				</section>
