--- a/app/page-product.html
+++ b/app/page-product.html
@@ -302,6 +302,12 @@
 
 						<div class="product-left d-none d-lg-block">
 							<div class="product-slider-wrap">
+								<div class="cat-labels-wrap">
+									<div class="cat-item-label stock">Акция</div>
+									<div class="cat-item-label hit">Хит</div>
+									<div class="cat-item-label new">Новинка</div>
+								</div>
+
 								<div class="product-slider-nav owl-thumbs" data-slider-id="product-slider">
 									<!-- product-nav -->
 									<div class="product-nav" style="background-image: url('img/product-img-1.jpg');"></div>
@@ -352,6 +358,12 @@
 							<h2 class="product-title">Сетка стеклотканевая фасадная <br> 5*5 (145 гр/кв.м.), 50м.</h2>
 
 							<div class="product-slider-wrap d-flex d-lg-none">
+								<div class="cat-labels-wrap">
+									<div class="cat-item-label stock">Акция</div>
+									<div class="cat-item-label hit">Хит</div>
+									<div class="cat-item-label new">Новинка</div>
+								</div>
+
 								<div class="product-slider-nav owl-thumbs" data-slider-id="product-slider">
 									<!-- product-nav -->
 									<div class="product-nav" style="background-image: url('img/product-img-1.jpg');"></div>
@@ -448,10 +460,11 @@
 
 							<div class="product-bottom">
 								<div class="product-price">
-									<span>1 322</span> &#8381;
+									<div class="current"><span>1 322</span> &#8381;</div>
+									<div class="old">2 999 &#8381;</div>
 								</div>
 
-								<a href="#0" class="btn btn-blue">Заказать</a>
+								<a href="#0" class="btn btn-blue add_to_cart_button" data-quantity="">Заказать</a>
 							</div>
 						</div>
 					</div>
