--- a/app/page-production.html
+++ b/app/page-production.html
@@ -305,11 +305,14 @@
 								<div class="production-item">
 									<div class="production-item-img" style="background-image: url('img/production-img-1.jpg');"></div>
 									<div class="production-item-content">
-										<div class="production-item-title">Строительные материалы</div>
+										<a href="#0" class="production-item-title">Строительные материалы</a>
 										<div class="production-item-links">
 											<a href="#0" class="production-item-link">Профиль для ГКЛ</a>
 											<a href="#0" class="production-item-link">Гипсокартонный лист</a>
 											<a href="#0" class="production-item-link">Армированные материалы</a>
+											<a href="#0" class="production-item-link">Пленка</a>
+											<a href="#0" class="production-item-link">Пленка</a>
+											<a href="#0" class="production-item-link">Пленка</a>
 											<a href="#0" class="production-item-link">Пленка</a>
 										</div>
 										<a href="#0" class="more-links">+3 категории</a>
