--- a/app/index.html
+++ b/app/index.html
@@ -265,7 +265,7 @@
 							<button type="submit" class="btn btn-blue"><img src="img/icons/search-icon.png" alt="alt"></button>
 						</form>
 
-						<a href="#0" class="top-help">Нужна помощь?</a>
+						<a href="#popup-message" class="top-help btn-popup" data-title="Заявка отправлена!">Нужна помощь?</a>
 						<a href="#0" class="top-stocks">Акции и скидки %</a>
 
 
@@ -575,6 +575,84 @@
 		Разработка сайта <a href="https://grampus-studio.ru/" target="_blank"><img src="img/dev-logo.png" alt="alt"></a>
 	</div>
 </div>
+
+
+
+	<div class="hidden">
+		<form class="contact-form popup-form" id="popup-callback">
+
+			<!-- Hidden Required Fields -->
+			<input type="hidden" name="project_name" value="Купи и строй">
+			<input type="hidden" name="admin_email" value="alexey.kobilianskiy@gmail.com">
+			<input type="hidden" name="form_subject" value="Заявка с сайта Купи и строй">
+			<!-- END Hidden Required Fields -->
+
+
+			<h3>Оставьте заявку</h3>
+			<p>И мы свяжемся с Вами в ближайшее время</p>
+
+			<div class="form-labels-wrap">
+				<label>
+					<input type="text" placeholder="Имя" name="Имя" autocomplete="off" data-validation="custom"
+						   data-validation-regexp="^[a-zA-Zа-яА-Я ]{1,20}$"
+						   data-validation-error-msg="* Укажите ваше имя">
+				</label>
+				<label>
+					<input type="text" class="user-phone" name="Телефон" placeholder="Номер телефона"
+						   autocomplete="off" data-validation="custom"
+						   data-validation-regexp="\([0-9]{3}\)\s[0-9]{3}-[0-9]{2}-[0-9]{2}"
+						   data-validation-error-msg="* Укажите ваш телефон">
+				</label>
+				<div class="btn-wrap">
+					<button type="submit" class="btn btn-blue">Отправить</button>
+				</div>
+			</div>
+		</form>
+
+
+		<form class="contact-form popup-form" id="popup-message">
+
+			<!-- Hidden Required Fields -->
+			<input type="hidden" name="project_name" value="Купи и строй">
+			<input type="hidden" name="admin_email" value="alexey.kobilianskiy@gmail.com">
+			<input type="hidden" name="form_subject" value="Заявка с сайта Купи и строй">
+			<!-- END Hidden Required Fields -->
+
+
+			<h3>Оставьте нам сообщение</h3>
+			<p>И мы свяжемся с Вами в ближайшее время</p>
+
+			<div class="form-labels-wrap">
+				<label>
+					<input type="text" placeholder="Имя" name="Имя" autocomplete="off" data-validation="custom"
+						   data-validation-regexp="^[a-zA-Zа-яА-Я ]{1,20}$"
+						   data-validation-error-msg="* Укажите ваше имя">
+				</label>
+				<label>
+					<input type="text" class="user-phone" name="Телефон" placeholder="Номер телефона"
+						   autocomplete="off" data-validation="custom"
+						   data-validation-regexp="\([0-9]{3}\)\s[0-9]{3}-[0-9]{2}-[0-9]{2}"
+						   data-validation-error-msg="* Укажите ваш телефон">
+				</label>
+
+				<label>
+					<textarea name="Сообщение" autocomplete="off" placeholder="Ваше сообщение" data-validation="required"></textarea>
+				</label>
+				<div class="btn-wrap">
+					<button type="submit" class="btn btn-blue">Отправить</button>
+				</div>
+			</div>
+		</form>
+
+		<div class="popup-form greeting" id="greeting">
+			<h3 id="greeting-title">Спасибо!</h3>
+			<p>Наши менеджеры свяжутся с Вами в ближайшее время</p>
+		</div>
+	</div>
+
+
+
+
 
 <!-- ======= HTML FOR PHOTOSWIPE ======= -->
 <!-- Root element of PhotoSwipe. Must have class pswp. -->
